--- a/.config
+++ b/.config
@@ -132,9 +132,35 @@ CONFIG_RT_USING_DFS_V1=y
 # CONFIG_RT_USING_DFS_V2 is not set
 CONFIG_DFS_FILESYSTEMS_MAX=4
 CONFIG_DFS_FILESYSTEM_TYPES_MAX=4
-# CONFIG_RT_USING_DFS_ELMFAT is not set
+CONFIG_RT_USING_DFS_ELMFAT=y
+
+#
+# elm-chan's FatFs, Generic FAT Filesystem Module
+#
+CONFIG_RT_DFS_ELM_CODE_PAGE=437
+CONFIG_RT_DFS_ELM_WORD_ACCESS=y
+# CONFIG_RT_DFS_ELM_USE_LFN_0 is not set
+# CONFIG_RT_DFS_ELM_USE_LFN_1 is not set
+# CONFIG_RT_DFS_ELM_USE_LFN_2 is not set
+CONFIG_RT_DFS_ELM_USE_LFN_3=y
+CONFIG_RT_DFS_ELM_USE_LFN=3
+CONFIG_RT_DFS_ELM_LFN_UNICODE_0=y
+# CONFIG_RT_DFS_ELM_LFN_UNICODE_1 is not set
+# CONFIG_RT_DFS_ELM_LFN_UNICODE_2 is not set
+# CONFIG_RT_DFS_ELM_LFN_UNICODE_3 is not set
+CONFIG_RT_DFS_ELM_LFN_UNICODE=0
+CONFIG_RT_DFS_ELM_MAX_LFN=255
+CONFIG_RT_DFS_ELM_DRIVES=2
+CONFIG_RT_DFS_ELM_MAX_SECTOR_SIZE=512
+# CONFIG_RT_DFS_ELM_USE_ERASE is not set
+CONFIG_RT_DFS_ELM_REENTRANT=y
+CONFIG_RT_DFS_ELM_MUTEX_TIMEOUT=3000
+# CONFIG_RT_DFS_ELM_USE_EXFAT is not set
+# end of elm-chan's FatFs, Generic FAT Filesystem Module
+
 CONFIG_RT_USING_DFS_DEVFS=y
-# CONFIG_RT_USING_DFS_ROMFS is not set
+CONFIG_RT_USING_DFS_ROMFS=y
+# CONFIG_RT_USING_DFS_ROMFS_USER_ROOT is not set
 # CONFIG_RT_USING_DFS_CROMFS is not set
 # CONFIG_RT_USING_DFS_RAMFS is not set
 # CONFIG_RT_USING_DFS_TMPFS is not set
@@ -181,7 +207,13 @@ CONFIG_RT_USING_PWM=y
 CONFIG_RT_USING_RTC=y
 # CONFIG_RT_USING_ALARM is not set
 # CONFIG_RT_USING_SOFT_RTC is not set
-# CONFIG_RT_USING_SDIO is not set
+CONFIG_RT_USING_SDIO=y
+CONFIG_RT_SDIO_STACK_SIZE=512
+CONFIG_RT_SDIO_THREAD_PRIORITY=15
+CONFIG_RT_MMCSD_STACK_SIZE=1024
+CONFIG_RT_MMCSD_THREAD_PREORITY=22
+CONFIG_RT_MMCSD_MAX_PARTITION=16
+# CONFIG_RT_SDIO_DEBUG is not set
 CONFIG_RT_USING_SPI=y
 # CONFIG_RT_USING_SPI_BITOPS is not set
 # CONFIG_RT_USING_QSPI is not set
@@ -297,7 +329,7 @@ CONFIG_SAL_INTERNET_CHECK=y
 #
 CONFIG_SAL_USING_LWIP=y
 # CONFIG_SAL_USING_AT is not set
-CONFIG_SAL_USING_TLS=y
+# CONFIG_SAL_USING_TLS is not set
 # end of Docking with protocol stacks
 
 CONFIG_SAL_USING_POSIX=y
@@ -441,24 +473,7 @@ CONFIG_ULOG_BACKEND_USING_CONSOLE=y
 # CONFIG_PKG_USING_LORAWAN_DRIVER is not set
 # CONFIG_PKG_USING_PAHOMQTT is not set
 # CONFIG_PKG_USING_UMQTT is not set
-CONFIG_PKG_USING_WEBCLIENT=y
-CONFIG_PKG_WEBCLIENT_PATH="/packages/iot/webclient"
-CONFIG_WEBCLIENT_DEBUG=y
-CONFIG_WEBCLIENT_USING_SAMPLES=y
-# CONFIG_WEBCLIENT_USING_FILE_DOWMLOAD is not set
-# CONFIG_WEBCLIENT_NOT_USE_TLS is not set
-# CONFIG_WEBCLIENT_USING_SAL_TLS is not set
-CONFIG_WEBCLIENT_USING_MBED_TLS=y
-CONFIG_PKG_USING_WEBCLIENT_V220=y
-# CONFIG_PKG_USING_WEBCLIENT_V212 is not set
-# CONFIG_PKG_USING_WEBCLIENT_V211 is not set
-# CONFIG_PKG_USING_WEBCLIENT_V210 is not set
-# CONFIG_PKG_USING_WEBCLIENT_V201 is not set
-# CONFIG_PKG_USING_WEBCLIENT_V200 is not set
-# CONFIG_PKG_USING_WEBCLIENT_V100 is not set
-# CONFIG_PKG_USING_WEBCLIENT_LATEST_VERSION is not set
-CONFIG_PKG_WEBCLIENT_VER="v2.2.0"
-CONFIG_PKG_WEBCLIENT_VER_NUM=0x20200
+# CONFIG_PKG_USING_WEBCLIENT is not set
 # CONFIG_PKG_USING_WEBNET is not set
 # CONFIG_PKG_USING_MONGOOSE is not set
 # CONFIG_PKG_USING_MYMQTT is not set
@@ -613,41 +628,7 @@ CONFIG_PKG_NETUTILS_VER_NUM=0x99999
 #
 # security packages
 #
-CONFIG_PKG_USING_MBEDTLS=y
-
-#
-# Select Root Certificate
-#
-CONFIG_PKG_USING_MBEDTLS_USE_ALL_CERTS=y
-CONFIG_PKG_USING_MBEDTLS_USER_CERTS=y
-CONFIG_PKG_USING_MBEDTLS_THAWTE_ROOT_CA=y
-CONFIG_PKG_USING_MBEDTLS_VERSIGN_PBULIC_ROOT_CA=y
-CONFIG_PKG_USING_MBEDTLS_VERSIGN_UNIVERSAL_ROOT_CA=y
-CONFIG_PKG_USING_MBEDTLS_GEOTRUST_ROOT_CA=y
-CONFIG_PKG_USING_MBEDTLS_DIGICERT_ROOT_CA=y
-CONFIG_PKG_USING_MBEDTLS_GODADDY_ROOT_CA=y
-CONFIG_PKG_USING_MBEDTLS_COMODOR_ROOT_CA=y
-CONFIG_PKG_USING_MBEDTLS_DST_ROOT_CA=y
-CONFIG_PKG_USING_MBEDTLS_CLOBALSIGN_ROOT_CA=y
-CONFIG_PKG_USING_MBEDTLS_ENTRUST_ROOT_CA=y
-CONFIG_PKG_USING_MBEDTLS_AMAZON_ROOT_CA=y
-CONFIG_PKG_USING_MBEDTLS_CERTUM_TRUSTED_NETWORK_ROOT_CA=y
-# end of Select Root Certificate
-
-CONFIG_MBEDTLS_AES_ROM_TABLES=y
-CONFIG_MBEDTLS_ECP_WINDOW_SIZE=2
-CONFIG_MBEDTLS_SSL_MAX_CONTENT_LEN=4096
-# CONFIG_PKG_USING_MBEDTLS_EXAMPLE is not set
-# CONFIG_PKG_USING_MBEDTLS_DEBUG is not set
-CONFIG_PKG_MBEDTLS_PATH="/packages/security/mbedtls"
-# CONFIG_PKG_USING_MBEDTLS_V2281 is not set
-CONFIG_PKG_USING_MBEDTLS_V27102=y
-# CONFIG_PKG_USING_MBEDTLS_V27101 is not set
-# CONFIG_PKG_USING_MBEDTLS_V2710 is not set
-# CONFIG_PKG_USING_MBEDTLS_V261 is not set
-# CONFIG_PKG_USING_MBEDTLS_V260 is not set
-# CONFIG_PKG_USING_MBEDTLS_LATEST_VERSION is not set
-CONFIG_PKG_MBEDTLS_VER="v2.7.10.2"
+# CONFIG_PKG_USING_MBEDTLS is not set
 # CONFIG_PKG_USING_LIBSODIUM is not set
 # CONFIG_PKG_USING_LIBHYDROGEN is not set
 # CONFIG_PKG_USING_TINYCRYPT is not set
@@ -763,7 +744,6 @@ CONFIG_PKG_CJSON_VER="latest"
 # CONFIG_PKG_USING_CPU_USAGE is not set
 # CONFIG_PKG_USING_GBK2UTF8 is not set
 # CONFIG_PKG_USING_VCONSOLE is not set
-# CONFIG_PKG_USING_MBEDTLS_BENCH is not set
 # CONFIG_PKG_USING_KDB is not set
 # CONFIG_PKG_USING_WAMR is not set
 # CONFIG_PKG_USING_MICRO_XRCE_DDS_CLIENT is not set
@@ -914,6 +894,7 @@ CONFIG_PKG_RT_VSNPRINTF_FULL_VER="latest"
 # CONFIG_PKG_USING_STM32L4_CMSIS_DRIVER is not set
 # CONFIG_PKG_USING_STM32WB55_SDK is not set
 # CONFIG_PKG_USING_STM32_SDIO is not set
+CONFIG_SDIO_MAX_FREQ=1000000
 # end of STM32 HAL & SDK Drivers
 
 #
@@ -1144,19 +1125,43 @@ CONFIG_PKG_RT_VSNPRINTF_FULL_VER="latest"
 #
 # samples: kernel and components samples
 #
-# CONFIG_PKG_USING_KERNEL_SAMPLES is not set
+CONFIG_PKG_USING_KERNEL_SAMPLES=y
+CONFIG_PKG_KERNEL_SAMPLES_PATH="/packages/misc/samples/kernel_samples"
+# CONFIG_PKG_USING_KERNEL_SAMPLES_V030 is not set
+# CONFIG_PKG_USING_KERNEL_SAMPLES_V040 is not set
+CONFIG_PKG_USING_KERNEL_SAMPLES_LATEST_VERSION=y
+CONFIG_PKG_KERNEL_SAMPLES_VER="latest"
+CONFIG_PKG_USING_KERNEL_SAMPLES_EN=y
+# CONFIG_PKG_USING_KERNEL_SAMPLES_ZH is not set
+# CONFIG_KERNEL_SAMPLES_USING_THREAD is not set
+# CONFIG_KERNEL_SAMPLES_USING_SEMAPHORE is not set
+# CONFIG_KERNEL_SAMPLES_USING_MUTEX is not set
+CONFIG_KERNEL_SAMPLES_USING_MAILBOX=y
+# CONFIG_KERNEL_SAMPLES_USING_EVENT is not set
+# CONFIG_KERNEL_SAMPLES_USING_MESSAGEQUEUE is not set
+# CONFIG_KERNEL_SAMPLES_USING_TIMER is not set
+# CONFIG_KERNEL_SAMPLES_USING_HEAP is not set
+# CONFIG_KERNEL_SAMPLES_USING_MEMHEAP is not set
+# CONFIG_KERNEL_SAMPLES_USING_MEMPOOL is not set
+# CONFIG_KERNEL_SAMPLES_USING_IDLEHOOK is not set
+# CONFIG_KERNEL_SAMPLES_USING_SIGNAL is not set
+# CONFIG_KERNEL_SAMPLES_USING_INTERRUPT is not set
+# CONFIG_KERNEL_SAMPLES_USING_PRI_INVERSION is not set
+# CONFIG_KERNEL_SAMPLES_USING_TIME_SLICE is not set
+# CONFIG_KERNEL_SAMPLES_USING_SCHEDULER_HOOK is not set
+# CONFIG_KERNEL_SAMPLES_USING_PRODUCER_CONSUMER is not set
 # CONFIG_PKG_USING_FILESYSTEM_SAMPLES is not set
 CONFIG_PKG_USING_NETWORK_SAMPLES=y
 CONFIG_PKG_NETWORK_SAMPLES_PATH="/packages/misc/samples/network_samples"
 # CONFIG_PKG_USING_NETWORK_SAMPLES_V030 is not set
 CONFIG_PKG_USING_NETWORK_SAMPLES_LATEST_VERSION=y
 CONFIG_PKG_NETWORK_SAMPLES_VER="latest"
-# CONFIG_NETWORK_SAMPLES_USING_TCP_CLIENT is not set
-# CONFIG_NETWORK_SAMPLES_USING_TCP_SERVER is not set
-# CONFIG_NETWORK_SAMPLES_USING_UDP_CLIENT is not set
-# CONFIG_NETWORK_SAMPLES_USING_UDP_SERVER is not set
-# CONFIG_NETWORK_SAMPLES_USING_TCP_CLIENT_SELECT is not set
-CONFIG_NETWORK_SAMPLES_USING_HTTP_CLIENT=y
+CONFIG_NETWORK_SAMPLES_USING_TCP_CLIENT=y
+CONFIG_NETWORK_SAMPLES_USING_TCP_SERVER=y
+CONFIG_NETWORK_SAMPLES_USING_UDP_CLIENT=y
+CONFIG_NETWORK_SAMPLES_USING_UDP_SERVER=y
+CONFIG_NETWORK_SAMPLES_USING_TCP_CLIENT_SELECT=y
+# CONFIG_NETWORK_SAMPLES_USING_HTTP_CLIENT is not set
 # CONFIG_PKG_USING_PERIPHERAL_SAMPLES is not set
 # end of samples: kernel and components samples
 
@@ -1471,7 +1476,10 @@ CONFIG_BSP_USING_USB_TO_USART=y
 # CONFIG_BSP_USING_SPI_FLASH is not set
 # CONFIG_BSP_USING_EEPROM is not set
 # CONFIG_BSP_USING_ENC28j60 is not set
-# CONFIG_BSP_USING_FS is not set
+CONFIG_BSP_USING_FS=y
+CONFIG_BSP_USING_SDCARD_FATFS=y
+CONFIG_BSP_USING_FS_AUTO_MOUNT=y
+# CONFIG_BSP_USING_FLASH_FATFS is not set
 # CONFIG_BSP_USING_FAL is not set
 # CONFIG_BSP_USING_EASYFLASH is not set
 CONFIG_BSP_USING_RW007_WLAN=y
@@ -1513,7 +1521,7 @@ CONFIG_BSP_USING_ONCHIP_RTC=y
 CONFIG_BSP_RTC_USING_LSE=y
 # CONFIG_BSP_RTC_USING_LSI is not set
 # CONFIG_BSP_USING_WDT is not set
-# CONFIG_BSP_USING_SDIO is not set
+CONFIG_BSP_USING_SDIO=y
 # CONFIG_BSP_USING_USBD is not set
 # CONFIG_BSP_USING_USBH is not set
 # CONFIG_BSP_USING_PULSE_ENCODER is not set
